--- a/index.html
+++ b/index.html
@@ -10,11 +10,11 @@
     <title>Antonella Bogado Benuzzi</title>
 </head>
 <body>
-    <nav class="nav d-flex">
+    <nav class="nav d-flex" id="top">
         <ul class="d-flex">
-            <li class="nav-item"><a href="#sobre-mi">Sobre mi</a></li>
-            <li class="nav-item"><a href="#proyectos">Proyectos</a></li>
-            <li class="nav-item"><a href="#contacto">Contacto</a></li>
+            <li class="nav-item"><a id="nav-sobremi" href="#sobre-mi">Sobre mi</a></li>
+            <li class="nav-item"><a id="nav-proyectos" href="#proyectos">Proyectos</a></li>
+            <li class="nav-item"><a id="nav-contacto" href="#contacto">Contacto</a></li>
         </ul>
     </nav>
     
@@ -33,43 +33,40 @@
         </div>
     </header>
 
-    <section id="sobre-mi">
-        <div class="sobre-mi d-flex">
+    <section id="sobre-mi" class="d-grid">
+        <div class="titulo d-flex">
             <h2>Sobre mi</h2>
         </div>
-        <div class="d-flex cv">
+        <div class="resumen">
+            <p>Soy estudiante de Diseño Multimedial en la UNLP donde desarrollé habilidades de Desarrollo Web, Diseño UX/UI, programación, entre otras.<br>Además, estoy finalizando mi carrera como desarrolladora frontend.</p>
+            <h3><a href="./cv/CV Antonella Bogado.pdf" target="_blank">Curriculum PDF</a></h3>
+        </div>
+        <div class="tecnologias d-flex">
             <div>
-                <p>Soy estudiante de Diseño Multimedial en la UNLP donde desarrollé habilidades de Desarrollo Web, Diseño UX/UI, programación, entre otras. Además, estoy finalizando mi carrera como desarrolladora frontend.</p>
-                <h3><a href="./cv/CV Antonella Bogado.pdf" target="_blank">Curriculum PDF</a></h3>
+                <img src="./imagenes/html.png" alt="HTML">
+                <img src="./imagenes/css.png" alt="CSS">
+                <img src="./imagenes/js.png" alt="JavaScript">
+                <img src="./imagenes/react.png" alt="React JS">
+                <img src="./imagenes/bootstrap.png" alt="Bootstrap">
+                <img src="./imagenes/sass.png" alt="Lenguaje SASS">
+                <img src="./imagenes/git.png" alt="Git">
             </div>
             <div>
-                <div>
-                    <img src="./imagenes/html.png" alt="HTML">
-                    <img src="./imagenes/css.png" alt="CSS">
-                    <img src="./imagenes/js.png" alt="JavaScript">
-                    <img src="./imagenes/react.png" alt="React JS">
-                    <img src="./imagenes/bootstrap.png" alt="Bootstrap">
-                    <img src="./imagenes/sass.png" alt="Lenguaje SASS">
-                    <img src="./imagenes/git.png" alt="Git">
-                </div>
-                <div>
-                    <img src="./imagenes/figma.png" alt="Figma">
-                    <img src="./imagenes/illustrator.png" alt="Adobe Illustrator">
-                    <img src="./imagenes/xd.png" alt="Adobe XD">
-                </div>
+                <img src="./imagenes/figma.png" alt="Figma">
+                <img src="./imagenes/illustrator.png" alt="Adobe Illustrator">
+                <img src="./imagenes/xd.png" alt="Adobe XD">
             </div>
         </div>
     </section>
 
-    <section id="proyectos">
-        <div class="proyectos d-flex">
+    <section id="proyectos" class="d-grid">
+        <div class="titulo d-flex">
             <h2>Proyectos</h2>
         </div>
         <div class="proyectos-container d-flex">
             <div class="proyecto">
-                <img src="" alt="fanatic">
-                <h3>Fanatic</h3>
-                <p>E-commerce // en construcción</p>
+                <h3>Fanatic // en construcción</h3>
+                <p>E-commerce</p>
                 <ul>
                     <li><a href="https://github.com/antonellabogado/tormenta" target="_blank">Link al repositorio</a></li>
                 </ul>
@@ -100,21 +97,26 @@
         </div>
     </section>
 
-    <section id="contacto">
-        <div class="contacto d-flex">
+    <section id="contacto" class="d-grid">
+        <div class="titulo d-flex">
             <h2>Contacto</h2>
         </div>
-
-        <div>
-            <form action="">
-                <input type="text" name="nombre" placeholder="Nombre">
-                <input type="email" name="email"
+        
+        <form action="" class="d-flex form">
+            <input type="text" name="nombre" placeholder="Nombre">
+            <input type="email" name="email"
                 placeholder="Email">
-                <input type="text" name="asunto" placeholder="Asunto">
-                <input type="text" name="mensaje" placeholder="Mensaje">
-                <input type="submit" value="Enviar">
-            </form>
-            <p>telefono y mail</p>
+            <input type="text" name="asunto" placeholder="Asunto">
+            <input type="text" name="mensaje" placeholder="Mensaje">
+            <input type="submit" value="Enviar">
+        </form>
+
+        <div class="medios-contacto">
+            <p>O contactame directamente por</p>
+            <ul>
+                <li><a href="https://wa.me/5492345443497" target="_blank">+54 9 2345 44-3497</a></li>
+                <li><a href="mailto:antonellabogadob@gmail.com">antonellabogadob@gmail.com</a></li>
+            </ul>
         </div>
     </section>
 </body>
